<resources>
    <string name="app_name">SubscriptionManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_email">Please enter a email</string>
    <string name="no_password">Please enter a password</string>
    <string name="no_password_verify">Please verify password</string>
    <string name="incorrect_verify">Passwords do not match</string>
    <string name="invalid_email">Email is not valid</string>
    <string name="register">Register</string>
    <string name="not_a_new_user">Not a new user?</string>
    <string name="back_to_login">Back to Login</string>
    <string name="incorrect_password_email">Incorrect Password / Email</string>
    <string name="verify_password">Verify Password</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="register_a_new_account">Register a new account</string>
    <string name="subscription_manager">Subscription Manager</string>
    <string name="add_subscription">add subscription</string>

    <!-- Custom date picker -->
    <string-array name="custom_years">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="custom_months">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>

    <string-array name="custom_days">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <string-array name="notification_times">
        <item>0:00</item>
        <item>1:00</item>
        <item>2:00</item>
        <item>3:00</item>
        <item>4:00</item>
        <item>5:00</item>
        <item>6:00</item>
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>

    <string-array name="selected_currency">
        <item>$</item>
        <item>€</item>
        <item>£</item>
        <item>¥</item>
        <item>₣</item>
        <item>₹</item>
    </string-array>

</resources>