<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp" >

            <!--text view for heading-->
            <TextView
                android:id="@+id/header_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/subscription_manager"
                android:textSize="35dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/header_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/register_a_new_account"
                android:textSize="25dp"
                android:layout_marginTop="40dp"
                />

            <!--edit text for email -->
            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header_login"
                android:layout_marginStart="10dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress" />

            <!--edit text for user password-->
            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_email"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edt_password_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_password"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/verify_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/error_pass_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_password_verification"
                android:gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:text="@string/incorrect_password_email"
                android:textSize="20dp"
                android:textColor="@color/design_default_color_error"
                android:visibility="invisible" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_below="@id/header" >

            <Button
                android:id="@+id/btn_register"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:layout_marginBottom="30dp" />

            <TextView
                android:id="@+id/text_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_login"
                android:gravity="center_horizontal"
                android:text="@string/not_a_new_user"
                android:textSize="20dp" />

            <!--button to log in a user -->
            <Button
                android:id="@+id/btn_back"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_register"
                android:layout_marginStart="10dp"
                android:text="@string/back_to_login"
                android:textAllCaps="false" />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>